# Mini-Cheetah-ROS

./: README.md
cheetah_control/: CMakeLists.txt  package.xml
cheetah_control/launch/: cheetah_control_current.launch  cheetah_control_position.launch  cheetah_control_trajectory.launch  cheetah_control_velocity.launch
cheetah_control/launch/controller/: cheetah_control_cur.yaml  cheetah_control_pos.yaml  cheetah_control_trajectory.yaml  cheetah_control_vel.yaml
cheetah_control/launch/scripts/: control_pos.py
cheetah_control/scripts/: chee_control.py  control_cur.py  control_pos.py
cheetah_description/: CMakeLists.txt  package.xml
cheetah_description/meshes/: mini_abad.stl  mini_body.stl  mini_upper_link.stl
cheetah_description/xacro/: mini_cheetah.urdf  mini_cheetah.urdf.xacro  mini_cheetah_control.urdf  mini_cheetah_control.urdf.xacro  mini_cheetah_control_vel.urdf
cheetah_show/: CMakeLists.txt  package.xml
cheetah_show/launch/: cheetah_gazebo.launch
reconfigure/: CMakeLists.txt  README.md  package.xml
reconfigure/cfg/: current_reconfigure.cfg  position_reconfigure.cfg
reconfigure/launch/: server_cur.launch  server_pos.launch
reconfigure/scripts/: cur_pub.py  cur_reconfigure_server.py  pos_pub.py  pos_reconfigure_server.py
